--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
     /* Temp */
     margin-bottom: 200px;
+    background-attachment: fixed;
 
 }
 
@@ -100,7 +101,7 @@ body {
     left: 7%;
 }
 
-#slogon-section #top-title {
+.top-title {
     color: #FFFFFF;
     font-size: 75px;
     font-weight: 600;
@@ -208,35 +209,44 @@ body {
     position: relative;
 }
 
-#service-title #top-title {
+.section-top-title{
     display: block;
     /* margin-top: 0px;
     margin-bottom: 0px; */
-    z-index: 10;
+    z-index: 15;
     font-size: 50px;
     line-height: 50px;
     font-weight: 600;
     Letter-spacing: 1px
 }
 
-#service-title #background-title {
+/* Section-background-title */
+.section-background-title {
     position: absolute;
-    top: -70%;
-    left:2.5%;
     font-weight: 600;
     color: rgba(241, 241, 247, 0.4);
-    /* color: blue; */
     font-size: 140px;
     letter-spacing: 12px
 }
 
 
-#service-title a{
+#service-title .section-background-title{
+    position: absolute;
+    top: -70%;
+    left:2.5%;
+    font-weight: 600;
+    color: rgba(241, 241, 247, 0.4);
+    font-size: 140px;
+    letter-spacing: 12px
+}
+
+
+/* #service-title {
     text-decoration: none;
     font-weight: 600;
     color: #A4A4A9;
     letter-spacing: 1px;
-}
+} */
 
 
 /* Service Items */
@@ -264,43 +274,295 @@ body {
     width: 70px;
     margin-bottom: 10px;
 }
-.item-wrapper p{
+.paragraph-content{
     font-size: 20px;
     color: #919196;
 }
 
-.service-item-button{
+/* section-button */
+.section-button{
     color: #919197;
     font-weight: 600;
     cursor: pointer;
+    text-decoration: none;
+}
+
+/* About */
+
+#about {
+    display: flex;
+    box-sizing: border-box;
+    /* justify-content: center; */
+    /* align-items: center; */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
+    margin-bottom: 100px;
+    width: calc(100% - 200px);
+}
+
+#about #image-wrapper{
+    width: 52%;
+    margin-right: 140px;
+}
+
+#about img{
+    width: 100%;
+}
+
+
+#about-content{
+    position: relative;
+    width:42%;
+    line-height: 1.5;
+    padding-right: 1%;
+}
+
+#about-content .section-top-title{
+    margin-bottom: 50px;
+    margin-top: 20px;
 }
 
 
 
+#about-content .section-background-title{
+    /* color: #E47311; */
+    top: -18%;
+    left: -10%;
+    z-index: -10;
+    /* font-size: 300px; */
+    /* z-index: 15; */
+}
+
+
+#about .service-item-button{
+    display: inline-block;
+    margin-top: 20px;
+}
+
+
+/* Fun Fact */
+
+#fun-fact{
+    display: flex;
+    width: calc(100% - 200px);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 80px 0px;
+}
+
+.fun-fact-wrapper{
+    box-sizing: border-box;
+    width: 24%;
+    padding-right: 120px;
+    line-height: 1.4;
+}
+
+.fun-title{
+    font-size: 80px;
+    color: #E47311;
+}
+
+.fun-text{
+    color: #919196;
+    font-size: 20px;
+}
+
+
+/* Section-3 Projects */
+
+
+#projects{
+    position: relative;
+    padding-bottom: 10px;
+    background-color: #F7F8FC;
+}
+
+#projects .section-background-title{
+    position: absolute;
+    left:2%;
+    top: 80px;
+    color: #F3F3F8;
+}
+
+#projects-title, #team-title{
+    display: flex;
+    padding: 100px;
+    justify-content: space-between;
+}
 
 
 
+/* Project - items-section */
+
+#project-items-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.project-list{
+    width: 31%;
+    margin: 12px
+}
+
+.project-list img{
+    width: 100%;
+}
 
 
 
+/* Orange Section */
+
+#orange-section{
+    padding: 100px 0px;
+    text-align: center;
+    line-height: 1.5;
+    padding-top: 7%; 
+    padding-bottom: 7%; 
+    color: #FFFFFF;
+    background-color: #e47312;
+    background-image: linear-gradient(72deg, #e47312, rgba(255, 99, 97, 0.78)), url(https://nuuk-e3eaa.firebaseapp.com/assets/img/banner-2.jpg);
+
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+#orange-section .paragraph-content{
+    margin-top: 16px;
+    font-size: 25px;
+    color: #F6CFBC;
+}
+
+#orange-section .section-button{
+    display: block;
+    text-decoration: none;
+    margin-top: 40px;
+    color: #FFFFFF;
+}
+
+/* Team and Testimonials */
+
+#team{
+    margin-top: 80px;
+    padding-bottom: 100px;
+}
+
+
+#team-wrapper{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+.profile-wrapper{
+    /* border: 1px solid lightcoral; */
+    position: relative;
+    margin: 0px 15px;
+    width: 20%;
+    height: 500px;
+}
+
+.profile-image-wrapper{
+    width: 100%; 
+    height: 75%;
+    background-position: top;
+    background-size: cover;
+}
+
+.image-1{
+    background-image: url(https://assets.website-files.com/5784f6d4845ba5842f136ad0/5e5ce8f8ac42944a82621657_team-1.jpg);
+}
+
+
+.image-2{
+    background-image: url(https://nuuk-e3eaa.firebaseapp.com/assets/img/team-2.jpg);
+}
+
+.image-3{
+    background-image: url(https://nuuk-e3eaa.firebaseapp.com/assets/img/team-3.jpg);
+}
+
+
+.image-4{
+    background-image: url(https://nuuk-e3eaa.firebaseapp.com/assets/img/team-4.jpg);
+}
 
 
 
+.profile-details{
+    padding: 10px 20px 10px 30px;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    height: 25%;
+}
+.profile-details h1{
+    color: #131314;
+    font-weight: 500;
+}
+
+.profile-details p{
+    color: #BDBDC9;
+    font-size: 20px;
+}
+
+
+/* Social- Media link */
+
+
+.social-media-link{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    /* top: 60%; */
+    bottom: 0;
+    background-color: #E47311;
+    padding: 8px 8px;
+    color: #FFFFFF;
+    width: 50px;
+    font-size: 20px;
+    align-items: center;
+    z-index: 5;
+}
+
+
+.social-media-link .logo {
+    cursor: pointer;
+    padding: 20px 14px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #e9873f
+    ;
+}
+
+.social-media-link :nth-child(3) {
+    border: none;
+}
 
 
 
+/* testimonials */
 
 
-
-
-
-
-
+#testimonials{
+    height: 500px;
+    padding-top: 100px;
+    background-color: lightpink;
+    margin-bottom: 200px;
+    text-align: center;
+    font-size: 60px;
+}
 
 
 
 
 footer{
     height: 500px;
+    margin-top: 400px;
     background-color: steelblue;
 }
+
+
